# libpqxx

./: CMakeLists.txt
CMakeModules/: FindPostgreSQL.cmake  PQXXSystemConfig.cmake
CMakeModules/compile-checks/: README.md  charconv-float.cpp  charconv-int.cxx  std-experimental-optional.cxx  std-optional.cpp
cmake/: PQXXConfig.cmake
config/: config.hxx.in  libpqxx-config.cmake  pkg-config.pc.in  version.hxx.in
include/: CMakeLists.txt
include/pqxx/: compiler-internal.hxx  compiler-public.hxx
src/: CMakeLists.txt
test/: CMakeLists.txt  test49.cxx  test87.cxx
test/unit/: CMakeLists.txt
